<resources>
    <string name="app_name">Blizzard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>


    <string name="no_data">N/A</string>
    <string name="snowy">Snowy</string>
    <string name="searched_city">The Searched City</string>
    <string name="humidity">Humidity:</string>
    <string name="temp">Temp:</string>
    <string name="search_hint">City</string>
    <string name="clear_sky">Clear sky</string>
    <string name="current_city">Lagos, NG</string>
    <string name="wind_title">Wind:</string>
    <string name="date_placeholder">Monday 11:40</string>
    <string name="humidity_placeHolder">73%</string>
    <string name="wind_placeholder">4mph</string>
    <string name="temp_21_u2103">21℃</string>

    <string name="permissionRationalTitle">Blizzard needs location access</string>
    <string name="permissionRationalMessage">
        Blizzard needs location access to load
        weather information for your current
        location.
    </string>
    <string name="no_internet">No internet Connection</string>

    <string name="weather_update">New weather update</string>

    <string name="error_getting_data">Error getting weather info</string>
    <string name="current_location">Current location</string>

    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favourites</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="favourite_button">Favourite button</string>
    <string name="search_buton">search buton</string>
</resources>